[package]
name = "huelib"
description = "Rust bindings for the Philips Hue API"
version = "0.12.4"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
homepage = "https://github.com/nn1ks/huelib-rs"
repository = "https://github.com/nn1ks/huelib-rs"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
keywords = ["philips", "hue", "light"]

[dependencies]
ureq = { version = "2.1.0", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_repr = "0.1.6"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
derive_setters = "0.1.5"
serde-xml-rs = { version = "0.4.1", optional = true }
url = { version = "2.2.1", features = ["serde"], optional = true }
uuid = { version = "0.8.2", features = ["serde"], optional = true }
mime = { version = "0.3.16", optional = true }

[features]
upnp-description = ["serde-xml-rs", "url", "uuid", "mime"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
