[package]
name = "huelib"
description = "Rust bindings for the Philips Hue API"
version = "0.13.2"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/huelib-rs"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
keywords = ["philips", "hue", "light"]

[dependencies]
ureq = { version = "2.3.0", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
derive_setters = "0.1.5"
serde-xml-rs = { version = "0.5.1", optional = true }
url = { version = "2.2.2", features = ["serde"], optional = true }
uuid = { version = "1.3.1", features = ["serde"], optional = true }
mime = { version = "0.3.16", optional = true }

[features]
upnp-description = ["serde-xml-rs", "url", "uuid", "mime"]
old-api = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
